# quick-query

./: .gitignore  README.md  architecture.md  publish.sh  pyproject.toml  qq  setup.py
examples/: conf.toml  prompts.toml  tools.toml
quick_query/: __init__.py  chat.py  cli.py  config.py  formatter.py  message.py  openapi.py  profile.py  prompter.py  streaming_response.py  template.py  tools.py
quick_query/tools/: __init__.py  base.py  builtins.py  coding.py  fs.py  memory.py  web.py
